--- a/app/views/employee/add_category.erb
+++ b/app/views/employee/add_category.erb
@@ -27,56 +27,61 @@
 </div>
 
 <div id="page-yield">
-
-  <% unless flash[:warn_notice].nil? %>
-    <div id="errorExplanation1">
-      <ul>
-        <li>
-          <%= flash[:warn_notice] %>
-        </li>
-      </ul>
+  <div class="box">
+    <div class="bread_crumb">
+      <%= link_to "#{t('hr_setting')}", :controller => "employee",:action => "settings" %> &raquo;
+      <%= t('employee_category') %>
     </div>
-  <% end %>
 
-  <% unless flash[:notice].nil? %>
-    <p class="flash-msg"> <%= flash[:notice] %> </p>
-  <% end %>
-
-  <%- form_for :category do |c| -%>
-
-    <%= error_messages_for 'category' %>
-    <div id="form-content">
-      <div class="label-field-pair">
-        <label for="category_name"><%= t('name') %></label>
-        <div class="text-input-bg"> <%= c.text_field :name %> </div>
+    <% unless flash[:warn_notice].nil? %>
+      <div id="errorExplanation1">
+        <ul>
+          <li>
+            <%= flash[:warn_notice] %>
+          </li>
+        </ul>
       </div>
+    <% end %>
 
-      <div class="label-field-pair">
-        <label for="category_prefix"><%= t('prefix') %></label>
-        <div class="text-input-bg"> <%= c.text_field :prefix %> </div>
-      </div>
+    <% unless flash[:notice].nil? %>
+      <p class="flash-msg"> <%= flash[:notice] %> </p>
+    <% end %>
 
-      <div class="label-checkbox-pair">
-        <label class="status" for="status"><%= t('status') %></label>
-        <div id="radio-buttons">
-          <%= c.radio_button  "status", "true", :checked => "checked" %>
-          <label class="label_for_status" for="add_grade_status_true"><%= t('active') %></label>
+    <%- form_for :category do |c| -%>
 
-          <%= c.radio_button  "status", "false" %>
-          <label class="label_for_status" for="add_grade_status_false"><%= t('inactive') %></label>
+      <%= error_messages_for 'category' %>
+      <div id="form-content">
+        <div class="label-field-pair">
+          <label for="category_name"><%= t('name') %></label>
+          <div class="text-input-bg"> <%= c.text_field :name %> </div>
+        </div>
+
+        <div class="label-field-pair">
+          <label for="category_prefix"><%= t('prefix') %></label>
+          <div class="text-input-bg"> <%= c.text_field :prefix %> </div>
+        </div>
+
+        <div class="label-checkbox-pair">
+          <label class="status" for="status"><%= t('status') %></label>
+          <div id="radio-buttons">
+            <%= c.radio_button  "status", "true", :checked => "checked" %>
+            <label class="label_for_status" for="add_grade_status_true"><%= t('active') %></label>
+
+            <%= c.radio_button  "status", "false" %>
+            <label class="label_for_status" for="add_grade_status_false"><%= t('inactive') %></label>
+          </div>
+        </div>
+
+        <div id="submit-button">
+          <%=submit_tag("► #{t('create_text')}") %>
         </div>
       </div>
 
-      <div id="submit-button">
-        <%=submit_tag("► #{t('create_text')}") %>
-      </div>
+
+    <%- end -%>
+
+    <div id="category-list">
+      <%= render :partial => "category" %>
     </div>
-
-
-  <%- end -%>
-
-  <div id="category-list">
-    <%= render :partial => "category" %>
   </div>
-
 </div>
