--- a/app/views/employee/add_grade.erb
+++ b/app/views/employee/add_grade.erb
@@ -27,63 +27,68 @@
 </div>
 
 <div id="page-yield">
-  <% unless flash[:warn_notice].nil? %>
-    <div id="errorExplanation1">
-      <ul>
-        <li>
-          <%= flash[:warn_notice] %>
-        </li>
-      </ul>
+  <div class="box">
+    <div class="bread_crumb">
+      <%= link_to "#{t('hr_setting')}", :controller => "employee",:action => "settings" %> &raquo;
+      <%= t('add_grade') %>
     </div>
-  <% end %>
-  <%- form_for :grade do |c| -%>
-
-    <% unless flash[:notice].nil? %>
-      <p class="flash-msg"> <%= flash[:notice] %> </p>
+    <% unless flash[:warn_notice].nil? %>
+      <div id="errorExplanation1">
+        <ul>
+          <li>
+            <%= flash[:warn_notice] %>
+          </li>
+        </ul>
+      </div>
     <% end %>
+    <%- form_for :grade do |c| -%>
 
-    <%= error_messages_for 'grade' %>
-    <div id="form-content">
-      <div class="label-field-pair">
-        <label for="grade_name"><%= t('name') %></label>
-        <div class="text-input-bg"> <%= c.text_field :name %> </div>
-      </div>
+      <% unless flash[:notice].nil? %>
+        <p class="flash-msg"> <%= flash[:notice] %> </p>
+      <% end %>
 
-      <div class="label-field-pair">
-        <label for="grade_priority"><%= t('priority') %></label>
-        <div class="text-input-bg"> <%= c.text_field :priority %> </div>
-      </div>
+      <%= error_messages_for 'grade' %>
+      <div id="form-content">
+        <div class="label-field-pair">
+          <label for="grade_name"><%= t('name') %></label>
+          <div class="text-input-bg"> <%= c.text_field :name %> </div>
+        </div>
 
-      <div class="label-field-pair">
-        <label for="grade_priority"><%= t('max_period_per_day') %></label>
-        <div class="text-input-bg"> <%= c.text_field :max_hours_day %> </div>
-      </div>
+        <div class="label-field-pair">
+          <label for="grade_priority"><%= t('priority') %></label>
+          <div class="text-input-bg"> <%= c.text_field :priority %> </div>
+        </div>
 
-      <div class="label-field-pair">
-        <label for="grade_priority"><%= t('max_period_per_week') %></label>
-        <div class="text-input-bg"> <%= c.text_field :max_hours_week %> </div>
-      </div>
+        <div class="label-field-pair">
+          <label for="grade_priority"><%= t('max_period_per_day') %></label>
+          <div class="text-input-bg"> <%= c.text_field :max_hours_day %> </div>
+        </div>
 
-      <div class="label-checkbox-pair">
-        <label class="status" for="status"><%= t('status') %></label>
-        <div id="radio-buttons">
-          <%= c.radio_button  "status", "true", :checked => "checked" %>
-          <label class="label_for_status" for="grade_status_true"><%= t('active') %></label>
+        <div class="label-field-pair">
+          <label for="grade_priority"><%= t('max_period_per_week') %></label>
+          <div class="text-input-bg"> <%= c.text_field :max_hours_week %> </div>
+        </div>
 
-          <%= c.radio_button  "status", "false" %>
-          <label class="label_for_status" for="grade_status_false"><%= t('inactive') %></label>
+        <div class="label-checkbox-pair">
+          <label class="status" for="status"><%= t('status') %></label>
+          <div id="radio-buttons">
+            <%= c.radio_button  "status", "true", :checked => "checked" %>
+            <label class="label_for_status" for="grade_status_true"><%= t('active') %></label>
+
+            <%= c.radio_button  "status", "false" %>
+            <label class="label_for_status" for="grade_status_false"><%= t('inactive') %></label>
+          </div>
+        </div>
+
+        <div id="submit-button">
+          <%=submit_tag("► #{t('create_text')}") %>
         </div>
       </div>
 
-      <div id="submit-button">
-        <%=submit_tag("► #{t('create_text')}") %>
-      </div>
+    <%- end -%>
+
+    <div id="grade-list">
+      <%=  render :partial => "grade" %>
     </div>
-
-  <%- end -%>
-
-  <div id="grade-list">
-    <%=  render :partial => "grade" %>
   </div>
-
 </div>
