--- a/app/views/employee/add_department.erb
+++ b/app/views/employee/add_department.erb
@@ -27,53 +27,58 @@
 </div>
 
 <div id="page-yield">
+  <div class="box">
+    <div class="bread_crumb">
+      <%= link_to "#{t('hr_setting')}", :controller => "employee",:action => "settings" %> &raquo;
+      <%= t('add_department') %>
+    </div>
 
-  <%- form_for :department do |c| -%>
+    <%- form_for :department do |c| -%>
 
-    <% unless flash[:notice].nil? %>
-      <p class="flash-msg"> <%= flash[:notice] %> </p>
-    <% end %>
-    <% unless flash[:warn_notice].nil? %>
-      <div id="errorExplanation1">
-        <ul>
-          <li>
-            <%= flash[:warn_notice] %>
-          </li>
-        </ul>
-      </div>
-    <% end %>
-    <%= error_messages_for 'department' %>
-    <div id="form-content">
-      <div class="label-field-pair">
-        <label for="department_name"><%= t('name') %></label>
-        <div class="text-input-bg"> <%= c.text_field :name %> </div>
-      </div>
+      <% unless flash[:notice].nil? %>
+        <p class="flash-msg"> <%= flash[:notice] %> </p>
+      <% end %>
+      <% unless flash[:warn_notice].nil? %>
+        <div id="errorExplanation1">
+          <ul>
+            <li>
+              <%= flash[:warn_notice] %>
+            </li>
+          </ul>
+        </div>
+      <% end %>
+      <%= error_messages_for 'department' %>
+      <div id="form-content">
+        <div class="label-field-pair">
+          <label for="department_name"><%= t('name') %></label>
+          <div class="text-input-bg"> <%= c.text_field :name %> </div>
+        </div>
 
-      <div class="label-field-pair">
-        <label for="department_code"><%= "#{t('department_code')}" %></label>
-        <div class="text-input-bg"> <%= c.text_field :code %> </div>
-      </div>
+        <div class="label-field-pair">
+          <label for="department_code"><%= "#{t('department_code')}" %></label>
+          <div class="text-input-bg"> <%= c.text_field :code %> </div>
+        </div>
 
-      <div class="label-checkbox-pair">
-        <label class="status" for="status"><%= t('status') %></label>
-        <div id="radio-buttons">
-          <%= c.radio_button  "status", "true", :checked => "checked" %>
-          <label class="label_for_status" for="add_grade_status_true"><%= t('active') %></label>
+        <div class="label-checkbox-pair">
+          <label class="status" for="status"><%= t('status') %></label>
+          <div id="radio-buttons">
+            <%= c.radio_button  "status", "true", :checked => "checked" %>
+            <label class="label_for_status" for="add_grade_status_true"><%= t('active') %></label>
 
-          <%= c.radio_button  "status", "false" %>
-          <label class="label_for_status" for="add_grade_status_false"><%= t('inactive') %></label>
+            <%= c.radio_button  "status", "false" %>
+            <label class="label_for_status" for="add_grade_status_false"><%= t('inactive') %></label>
+          </div>
+        </div>
+
+        <div id="submit-button">
+          <%=submit_tag("► #{t('create_text')}") %>
         </div>
       </div>
 
-      <div id="submit-button">
-        <%=submit_tag("► #{t('create_text')}") %>
-      </div>
+    <%- end -%>
+
+    <div id="department-list">
+      <%= render :partial => "department" %>
     </div>
-
-  <%- end -%>
-
-  <div id="department-list">
-    <%= render :partial => "department" %>
   </div>
-
 </div>
