--- a/app/views/payroll/add_category.erb
+++ b/app/views/payroll/add_category.erb
@@ -30,65 +30,70 @@
 
 
 
-   <div id="page-yield">
- <% unless flash[:warn_notice].nil? %>
-    <div id="errorExplanation1">
-      <ul>
-        <li>
-          <%= flash[:warn_notice] %>
-        </li>
-      </ul>
+<div id="page-yield">
+  <div class="box">
+    <div class="bread_crumb">
+      <%= link_to "#{t('hr_setting')}", :controller => "employee",:action => "settings" %> &raquo;
+      <%= t('add_new_category') %>
     </div>
-  <% end %>
-  <% unless flash[:notice].nil? %>
-    <p class="flash-msg"> <%= flash[:notice] %> </p>
-  <% end %>
+    <% unless flash[:warn_notice].nil? %>
+      <div id="errorExplanation1">
+        <ul>
+          <li>
+            <%= flash[:warn_notice] %>
+          </li>
+        </ul>
+      </div>
+    <% end %>
+    <% unless flash[:notice].nil? %>
+      <p class="flash-msg"> <%= flash[:notice] %> </p>
+    <% end %>
 
-  <% form_for :category do |c| %>
+    <% form_for :category do |c| %>
       <%= error_messages_for 'category' %>
 
-    <div id="form-content">
-      <div class="label-field-pair">
-        <label for="category_name"><%= t('category_name') %></label>
-        <div class="text-input-bg"><%= c.text_field :name %></div>
-      </div>
-
-      <div class="label-field-pair">
-        <label for="percentage"><%= t('percentage') %></label>
-        <div class="text-input-bg"><%= c.text_field :percentage %></div>
-      </div>
-
-      <div class="label-field-pair">
-        <label for="percentage_of"><%= t('percentage_of') %></label>
-        <div class="text-input-bg">
-          <%= select :category, :payroll_category_id, @categories.map {|cat| [cat.name, cat.id]}, :prompt =>"#{t('select')}" %>
+      <div id="form-content">
+        <div class="label-field-pair">
+          <label for="category_name"><%= t('category_name') %></label>
+          <div class="text-input-bg"><%= c.text_field :name %></div>
         </div>
+
+        <div class="label-field-pair">
+          <label for="percentage"><%= t('percentage') %></label>
+          <div class="text-input-bg"><%= c.text_field :percentage %></div>
+        </div>
+
+        <div class="label-field-pair">
+          <label for="percentage_of"><%= t('percentage_of') %></label>
+          <div class="text-input-bg">
+            <%= select :category, :payroll_category_id, @categories.map {|cat| [cat.name, cat.id]}, :prompt =>"#{t('select')}" %>
+          </div>
+        </div>
+        <div class="label-radio-pair">
+          <label class="status" for="status"><%= t('status') %></label>
+          <div id="radio-buttons">
+            <%= c.radio_button  "status", "true", :checked => "checked" %>
+            <label class="label_for_status" for="add_grade_status_true"><%= t('active') %></label>
+
+            <%= c.radio_button  "status", "false" %>
+            <label class="label_for_status" for="add_grade_status_false"><%= t('inactive') %></label>
+          </div>
+        </div>
+        <div class="label-checkbox">
+          <%= c.check_box :is_deduction %> <%= t('is_deduction') %>
+        </div>
+        <div class="extender"></div>
+
+        <div id="submit-button">
+          <%=submit_tag("► #{t('create_text')}") %>
+        </div>
+
+
       </div>
- <div class="label-radio-pair">
-      <label class="status" for="status"><%= t('status') %></label>
-<div id="radio-buttons">
-      <%= c.radio_button  "status", "true", :checked => "checked" %>
-      <label class="label_for_status" for="add_grade_status_true"><%= t('active') %></label>
+    <% end %>
 
-      <%= c.radio_button  "status", "false" %>
-      <label class="label_for_status" for="add_grade_status_false"><%= t('inactive') %></label>
+    <div id="category-list">
+      <%= render :partial=>"category" %>
     </div>
-    </div>
-      <div class="label-checkbox">
-        <%= c.check_box :is_deduction %> <%= t('is_deduction') %>
-      </div>
-<div class="extender"></div>
-   
-    <div id="submit-button">
-      <%=submit_tag("► #{t('create_text')}") %>
-    </div>
-
-
-      </div>
-  <% end %>
-
-  <div id="category-list">
-    <%= render :partial=>"category" %>
   </div>
-
-   </div>
+</div>
