fixed  #3792 [Error message Style issue   ]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@4053 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/employee/add_grade.css
+++ b/public/stylesheets/employee/add_grade.css
@@ -113,6 +113,16 @@
     padding-top:3px;
     width:206px;
 }
+
+
+.errorExplanation {
+    background: url("/images/_global/error.png") no-repeat scroll 10px 14px #FFDEDF;
+    height: auto;
+    margin: 20px auto 20px 164px;
+    padding: 10px 0 20px 20px;
+    width: 543px;
+}
+
 #errorExplanation1 {
    background: #ffdedf url(/images/_global/error.png) no-repeat 10px 14px;
     -moz-border-radius:10px;
