breadcrumb for HR added
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@4056 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/add_position.erb
+++ b/app/views/employee/add_position.erb
@@ -29,6 +29,7 @@
 <div id="page-yield">
   <div class="box">
     <div class="bread_crumb">
+      <%= link_to "#{t('hr_text')}", :controller => "employee",:action => "hr" %> &raquo;
       <%= link_to "#{t('hr_setting')}", :controller => "employee",:action => "settings" %> &raquo;
       <%= t('add_position') %>
     </div>
