--- a/public/stylesheets/employee/add_grade.css
+++ b/public/stylesheets/employee/add_grade.css
@@ -129,6 +129,9 @@
     margin: 20px auto 20px 164px;
     padding: 10px 0 20px 20px;
     width: 543px;
+    border-radius:10px 10px 10px 10px;
+    -moz-border-radius: 10px 10px 10px 10px;
+    -webkit-border-radius: 10px 10px 10px 10px;
 }
 #errorExplanation1 ul {
     margin: 5px 0 0;
