fixes #3808 [Pay fee style issue in Fees Submission page ]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@4062 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/finance/pay_fees_defaulters.css
+++ b/public/stylesheets/finance/pay_fees_defaulters.css
@@ -79,6 +79,9 @@
     font-weight: bold;
     margin: 18px 132px 0 0;
     padding: 7px 10px;
+    border-radius: 10px 10px 10px 10px;
+    -moz-border-radius:10px 10px 10px 10px;
+    -webkit-border-radius: 10px 10px 10px 10px;
 }
 
 .submit_button:hover{
