fixes #3813 [Style issue in print receipt button ]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@4063 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/finance/pay_fees_defaulters.css
+++ b/public/stylesheets/finance/pay_fees_defaulters.css
@@ -223,6 +223,7 @@ label-field-pair2 {
 .pay_fees{
     text-align: right;
     margin-top:10px;
+    margin-bottom: 35px;
     /* margin-right: 29px; */
 }
 
