fixes  #3811 [Pay fee button style in Fees Submission page (Student wise and coursewise) ]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@4065 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/finance/fees_submission_batch.css
+++ b/public/stylesheets/finance/fees_submission_batch.css
@@ -63,6 +63,9 @@
     font-weight: bold;
     margin: 18px 132px 0 0;
     padding: 7px 10px;
+    border-radius: 10px 10px 10px 10px;
+    -moz-border-radius: 10px 10px 10px 10px;
+    -webkit-border-radius: 10px 10px 10px 10px;
 }
 .submit_button:hover{
     background:  #373B3F;
@@ -277,7 +280,7 @@ table#listing td a:hover{
 }
 
 td span{
-   color: #990A10;
+    color: #990A10;
 }
 
 table#listing td.col-8 {
