fixes  #3812 [PayAfter paying a fee different Receipt number Showing in fee page and transaction page  ]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@4066 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/_student_fees_submission.html.erb
+++ b/app/views/finance/_student_fees_submission.html.erb
@@ -17,7 +17,7 @@
 #specific language governing permissions and limitations
 #under the License. -%>
 
-<div class="name"><%= t('fees_receipt_no') %></div><div class="val themed_text"><span>:</span>F<%= @financefee.id %></div>
+<div class="name"><%= t('fees_receipt_no') %></div><div class="val themed_text"><span>:</span><%= @paid_fees.nil? ? t('n_a') : @paid_fees.map(&:receipt_no).join(',') %></div>
 <% unless @fee_category.nil? %>
   <div class="name"><%= t('fee_category_name') %></div><div class="val themed_text"><span>:</span><%= @fee_category.name %></div>
 <% end %>
