--- a/app/views/finance/_fees_submission_form.erb
+++ b/app/views/finance/_fees_submission_form.erb
@@ -22,7 +22,7 @@
 
 <% unless flash[:warning].nil? %><p class="flash-msg"><%= flash[:warning] %></p><% end %>
 
-<div class="name"><%= t('fees_receipt_no') %></div><div class="val themed_text"><span>:</span>F<%= @financefee.id %></div>
+<div class="name"><%= t('fees_receipt_no') %></div><div class="val themed_text"><span>:</span><%= @paid_fees.nil? ? t('n_a') : @paid_fees.map(&:receipt_no).join(',') %></div>
 <% unless @fee_category.nil? %>
   <div class="name"><%= t('fee_category_name') %></div><div class="val themed_text"><span>:</span><%= @fee_category.name %></div>
 <% end %>
