if first time reset is nil, it will consider financial start date as reset date
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@4070 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee_attendance/leave_reset_settings.erb
+++ b/app/views/employee_attendance/leave_reset_settings.erb
@@ -61,6 +61,9 @@
       <div class="label-field-pair">
         <label for="configuration_currency_type"><%= t('count_begin_date') %></label>
         <div class="text-input-bg">
+          <% if @last_reset.config_value.nil? %>
+            <% @last_reset.config_value= @fin_start_date.config_value %>
+          <% end %>
           <%= calendar_date_select_tag 'configuration[financial_year_start_date]',  I18n.l(@last_reset.config_value.to_date || @fin_start_date.config_value.to_date,:format=>:default) %>
         </div>
       </div>
