--- a/app/views/batch_transfers/index.html.erb
+++ b/app/views/batch_transfers/index.html.erb
@@ -43,7 +43,7 @@
     </label>
     <div class="text-input-bg">
       <%= select :courses, :name,
-        Course.active.map {|b| [b.course_name, b.id]},
+        Course.active.map {|b| [b.full_name, b.id]},
         {:prompt => "#{t('select_a_course')}"},
         {:onChange => "#{remote_function(:url => {:action => "update_batch"},
         :with => "'course_name='+ value",
