is_deleted feature added for user(core part)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@4104 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/previous_years_marks_overview.html.erb
+++ b/app/views/exam/previous_years_marks_overview.html.erb
@@ -38,7 +38,7 @@
   <div class="box">
     <div id="register">
       <%  @type = params[:type] %>
-      <% this_user = User.find(session[:user_id]) if session[:user_id] %>
+      <% this_user = @current_user %>
       <% unless this_user.student? or this_user.parent?  %>
         <div class="header">
           <div class="prev">
