--- a/app/views/archived_employee/_contact.erb
+++ b/app/views/archived_employee/_contact.erb
@@ -45,6 +45,6 @@
 <div class="edit-pdf-group">
   <div class="pdf">
     <%= link_to "► #{t('pdf_report')}",
-      {:controller => "employee", :action => "profile_pdf", :id => @employee.id},:target => '_blank', :class=> 'user_button' %>
+      { :action => "profile_pdf", :id => @employee.id},:target => '_blank', :class=> 'user_button' %>
   </div>
 </div>
