--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -223,14 +223,14 @@
     <% sub_menu_flag = 0 %>
     <% unless mod[:sub_menus].blank? %>
       <% mod[:sub_menus].each do|mnu| %>
-        <% if permitted_to?("#{mnu[:action]}".to_sym,mod[:plugin_auth_object],:context=>"#{mnu[:controller]}".to_sym) and mnu[:target_id]==mod[:name]%>
+        <% if can_access_request?("#{mnu[:action]}".to_sym,"#{mnu[:controller]}".to_sym) and mnu[:target_id]==mod[:name]%>
           <% sub_menu_flag = 1 %>
         <% end %>
       <% end %>
     <% end %>
     <% arrow = sub_menu_flag==1 ? " <span class=right-arrow>#{arrow_dir}</span>" : "" %>
     <% if mod[:more_menu][:target_id].present? %>
-      <% if permitted_to?(mod[:more_menu][:action].to_sym,mod[:plugin_auth_object],:context=>mod[:more_menu][:controller].to_sym) %>
+      <% if can_access_request?(mod[:more_menu][:action].to_sym,mod[:more_menu][:controller].to_sym) %>
         <% if sub_menu_flag==1 %>
               $('<%= mod[:more_menu][:target_id] %>').insert({bottom: '<li><%= link_to "#{t(mod[:more_menu][:title]).gsub("'","&#39;")}#{arrow}",:controller => "#{mod[:more_menu][:controller]}", :action=>"#{mod[:more_menu][:action]}" %><ul class="level-2" id="<%= mod[:name] %>"></ul></li>'})
         <% else %>
@@ -242,7 +242,7 @@
           <% if submenu[:target_id].present? %>
                 if ($('<%= submenu[:target_id] %>')!=null)
                 {
-                  $('<%= submenu[:target_id] %>').insert({bottom: '<li><%= link_to "#{t(submenu[:title]).gsub("'","&#39;")}",:controller => "#{submenu[:controller]}", :action=>"#{submenu[:action]}"  if permitted_to? "#{submenu[:action]}".to_sym,"#{submenu[:controller]}".to_sym  %></li>'})
+                  $('<%= submenu[:target_id] %>').insert({bottom: '<li><%= link_to "#{t(submenu[:title]).gsub("'","&#39;")}",:controller => "#{submenu[:controller]}", :action=>"#{submenu[:action]}"  if can_access_request? "#{submenu[:action]}".to_sym,"#{submenu[:controller]}".to_sym  %></li>'})
                 }
           <% end %>
         <% end %>
